# Anti-Money-Laundering-Classification

./: .gitattributes  .gitignore  Dockerfile  README.md  eda_&_preparation.ipynb  main.py  pyproject.toml  requirements.txt  setup.py  using_ml_algos_smote.ipynb
app/: app.py  main.py
data/: HI-Small_Trans_Sampled.csv  LI-Large_Trans_Sampled.csv
notebooks/: 1_eda_&_preparation.ipynb  2_using_ml_algos.ipynb  3_CatBoost-hyperparameter_tuning.ipynb  3_using_ml_algos_smote.ipynb  4_using_ANN.ipynb  GNN.ipynb  XGBoost-hyperparameter_tuning.ipynb  gnn1.ipynb  test_csv_fixing.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/previous work/: 1a_eda_&_preparation.ipynb  5_autoencoder.ipynb  XGBoost-hyperparameter_tuning copy.ipynb  columns_removal.ipynb
reference jupyter files/: Money_Laundering 2 copy.ipynb  Money_Laundering 2.ipynb  Money_laundering_final.ipynb
src/inference_pipeline/: inference.py
src/ingestion_pipeline/: ingestion.py
src/training_pipeline/: training.py  tuning.py
