[project]
name = "anti-money-laundering-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "gradio>=6.3.0",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.2.6",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
]
